@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Wrapper {
        ~ Wrapper()
        ~ process()
    }
  }
  

  com.company.Wrapper o-- mediator.JCC : jcc
  com.company.Wrapper o-- service.JPDC : jpdc
  com.company.Wrapper o-- service.JRTA : jrta
  com.company.Wrapper o-- service.JRTC : jrtc
  com.company.Wrapper o-- service.JWSA : jwsa


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
